refactor(admission): remove AdmissionStage use-cases, DTOs and update Prospect
